--- a/File_Viewer/main_window.ui
+++ b/File_Viewer/main_window.ui
@@ -13,7 +13,16 @@
   <property name="windowTitle">
    <string>Main_Window</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="1,2">
+    <item row="1" column="0">
+     <widget class="QTreeView" name="treeView"/>
+    </item>
+    <item row="1" column="1">
+     <widget class="QPlainTextEdit" name="plainTextEdit"/>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
