--- a/Banking-System/ui/main_window.ui
+++ b/Banking-System/ui/main_window.ui
@@ -15,11 +15,24 @@
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
+    <widget class="QListView" name="users_list_view">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
     <widget class="QLabel" name="the_label">
      <property name="text">
       <string>TextLabel</string>
      </property>
     </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QListView" name="accounts_list_view"/>
    </item>
   </layout>
  </widget>
